--- a/new/new.html
+++ b/new/new.html
@@ -30,6 +30,7 @@
     <button class="login" type="button">Log in</button>
   </div>
 </div>
+<div class="bigcont">
 <div class="librarysec">
   <div class="library">
     <div class="your">
@@ -48,9 +49,36 @@
   <div class="browse">
      <p class="yours">Let's find some podcasts to follow</p>
     <p class="it">We'll keep you updated on the latest episodes</p>
-    <button class="createply">Browse podcasts</button>
+    <button class="createply">Browse podcasts
+    </button>
+
+  </div>
+  <div class="cookies">
+    <a class="legal" href="">Legal</a>
+     <a class="legal" href="">Safety & Privacy Center </a>
+      <a class="legal" href="">Privacy Policy</a>
+       <a class="legal" href="">Cookies</a><br>
+       <a class="legal" href="">About Ads</a>
+        <a class="legal" href="">Accessibility</a><br>
+         <a class="legal" href="">Cookies</a>
+         
+         </div>
+         <div class="language">
+          <button class="lang" type="button"><svg data-encore-id="icon" role="img" aria-hidden="true" class="e-91000-icon e-91000-baseline" viewBox="0 0 16 16" style="--encore-icon-height: var(--encore-graphic-size-decorative-smaller); --encore-icon-width: var(--encore-graphic-size-decorative-smaller);"><path d="M8.152 16H8a8 8 0 1 1 .152 0m-.41-14.202c-.226.273-.463.713-.677 1.323-.369 1.055-.626 2.496-.687 4.129h3.547c-.06-1.633-.318-3.074-.687-4.129-.213-.61-.45-1.05-.676-1.323-.194-.235-.326-.285-.385-.296h-.044c-.055.007-.19.052-.391.296M4.877 7.25c.062-1.771.34-3.386.773-4.624q.148-.427.329-.806a6.51 6.51 0 0 0-4.436 5.43zm-3.334 1.5a6.51 6.51 0 0 0 4.436 5.43 8 8 0 0 1-.33-.806c-.433-1.238-.71-2.853-.772-4.624zm4.835 0c.061 1.633.318 3.074.687 4.129.214.61.451 1.05.677 1.323.202.244.336.29.391.297l.044-.001c.06-.01.19-.061.385-.296.226-.273.463-.713.676-1.323.37-1.055.626-2.496.687-4.129zm5.048 0c-.061 1.771-.339 3.386-.772 4.624q-.123.353-.268.674a6.5 6.5 0 0 0 4.071-5.298zm3.031-1.5a6.51 6.51 0 0 0-4.071-5.298q.145.322.268.674c.433 1.238.711 2.853.772 4.624z"></path></svg>English</button>
 
   </div>
 </div>
+</div>
+<div class="footer">
+  <div class="footercont1">
+<a class="t1" href="">Preview of Spotify</a><br>
+<a class="t2" href="">Sign up to get unlimited songs and podcasts with occasional ads. No credit card needed.</a>
+</div>
+<div class="footercont2">
+  <button>Sign up for free</button>
+</div>
+</div>
+
+
 
 </body>
